add sinogrm.hs generator

--- a/src/python/srf/external/stir/templates/sinogram.hs.j2
+++ b/src/python/srf/external/stir/templates/sinogram.hs.j2
@@ -1,5 +1,5 @@
 !INTERFILE :=
-name of data file := {{ path_sinogram }}
+name of data file := {{ spec.path_sinogram }}
 originating system := USERDEFINED
 !GENERAL DATA :=
 !GENERAL IMAGE DATA :=
@@ -14,7 +14,7 @@ number of dimensions := 4
 matrix axis label [4] := segment
 !matrix size [4] := {{ 2 * spec.nb_rings - 1 }}
 matrix axis label [2] := view
-!matrix size [2] := {{ spec.nb_crystal_per_ring }}
+!matrix size [2] := {{ spec.nb_detectors_per_ring // 2 }}
 matrix axis label [3] := axial coordinate
 !matrix size [3] := { 10,9,9,8,8,7,7,6,6,5,5,4,4,3,3,2,2,1,1 }
 matrix axis label [1] := tangential coordinate
@@ -24,23 +24,23 @@ maximum ring difference per segment := { 0,-1,1,-2,2,-3,3,-4,4,-5,5,-6,6,-7,7,-8
 Scanner parameters:= 
 Scanner type := USERDEFINED
 Number of rings                          := {{ spec.nb_rings }}
-Number of detectors per ring             := {{ spec.nb_blocks_pre_ring }}
-Inner ring diameter (cm)                 := {{ spec.inner_radius }}
+Number of detectors per ring             := {{ spec.nb_detectors_per_ring }}
+Inner ring diameter (cm)                 := {{ spec.inner_radius / 10.0 }}
 Average depth of interaction (cm)        := 0.07
-Distance between rings (cm)              := {{ spec.gap }}
-Default bin size (cm)                    := 0.167
+Distance between rings (cm)              := {{ "%.3f"|format(spec.ring_distance / 10.0) }}
+Default bin size (cm)                    := {{ "%.3f"|format(spec.ring_distance / 20.0) }}
 View offset (degrees)                    := 0
-Maximum number of non-arc-corrected bins := {{ spec.nb_crystal_per_ring }}
-Default number of arc-corrected bins     := {{ spec.nb_crystal_per_ring }}
-Number of blocks per bucket in transaxial direction         := {{ spec.nb_blocks_pre_ring }}
+Maximum number of non-arc-corrected bins := {{ spec.nb_detectors_per_ring // 2 }}
+Default number of arc-corrected bins     := {{ spec.nb_detectors_per_ring // 2 }}
+Number of blocks per bucket in transaxial direction         := {{ spec.nb_blocks_per_ring }}
 Number of blocks per bucket in axial direction              := 1
-Number of crystals per block in axial direction             := {{ spec.block.nb_crystal_axial }}
-Number of crystals per block in transaxial direction        := {{ spec.block.nb_crystal_transaxial }}
+Number of crystals per block in axial direction             := {{ spec.nb_crystal_axial }}
+Number of crystals per block in transaxial direction        := {{ spec.nb_crystal_transaxial }}
 Number of detector layers                                   := 1
 Number of crystals per singles unit in axial direction      := 1
 Number of crystals per singles unit in transaxial direction := 1
 end scanner parameters:=
-effective central bin size (cm) := {{ spec.central_bin_size }}
+effective central bin size (cm) := {{ "%.3f"|format(spec.central_bin_size / 20.0) }}
 image scaling factor[1] := 1
 data offset in bytes[1] := 0
 number of time frames := 1
