--- a/src/python/srf/external/lmrec/templates/ringpet_config.txt.j2
+++ b/src/python/srf/external/lmrec/templates/ringpet_config.txt.j2
@@ -5,5 +5,5 @@ Height: {{spec.axial_length}}
 RingGap: {{spec.gap}}
 NumberOfBlocksPerRing: {{spec.nb_blocks_per_ring}}
 NumberOfRings: {{spec.nb_rings}}
-Grid: {{spec.blocks_grid}}
-BlockSize: {{spec.blocks_size}}
+Grid: {{spec.block_grid}}
+BlockSize: {{spec.block_size}}
