--- a/src/python/srf/external/bbs/templates/map_task.txt.j2
+++ b/src/python/srf/external/bbs/templates/map_task.txt.j2
@@ -1,5 +1,6 @@
 Task: 1
 Name: NormalizationMap
+ProjectorType: siddon
 MapGrid: {{spec.imagegrid}}
 MapSize: {{spec.imagesize}}
 MapName: {{spec.path_map}}
