--- a/src/python/srf/external/bbs/templates/recon_task.txt.j2
+++ b/src/python/srf/external/bbs/templates/recon_task.txt.j2
@@ -1,5 +1,7 @@
 Task: 1
 Name: Reconstruction
+Method: MLEM
+ProjectorType: siddon
 Grid: {{spec.imagegrid}}
 Size: {{spec.imagesize}}
 MapName: {{spec.path_map}}
@@ -8,6 +10,7 @@ StartImage: {{spec.start_name}}
 NumberOfIteration: {{spec.nb_subiterations}}
 InputEventFile: {{spec.path_input}}
 OutputImage: {{spec.path_output}}
+OutputInterval: 1
 TOF_Flag: {{spec.tof_flag}}
 TOF_FWHM(mm): {{spec.tof_resolution}}
 TOF_BinSize(mm): {{spec.tof_binsize}}
