--- a/src/python/srf/external/stir/templates/sinogram.hs.j2
+++ b/src/python/srf/external/stir/templates/sinogram.hs.j2
@@ -12,18 +12,18 @@ applied corrections := None
 !number of bytes per pixel := 4
 number of dimensions := 4
 matrix axis label [4] := segment
-!matrix size [4] := {{ 2 * spec.nb_rings - 1 }}
+!matrix size [4] := {{ 2 * spec.nb_rings *spec.nb_crystal_axial - 1 }}
 matrix axis label [2] := view
 !matrix size [2] := {{ spec.nb_detectors_per_ring // 2 }}
 matrix axis label [3] := axial coordinate
-!matrix size [3] := { 10,9,9,8,8,7,7,6,6,5,5,4,4,3,3,2,2,1,1 }
+!matrix size [3] := {{spec.axial_coordinate }}
 matrix axis label [1] := tangential coordinate
 !matrix size [1] := {{ spec.nb_detectors_per_ring // 2 }}
-minimum ring difference per segment := { 0,-1,1,-2,2,-3,3,-4,4,-5,5,-6,6,-7,7,-8,8,-9,9 }
-maximum ring difference per segment := { 0,-1,1,-2,2,-3,3,-4,4,-5,5,-6,6,-7,7,-8,8,-9,9 }
+minimum ring difference per segment := {{spec.ring_difference }}
+maximum ring difference per segment := {{spec.ring_difference }}
 Scanner parameters:= 
 Scanner type := USERDEFINED
-Number of rings                          := {{ spec.nb_rings }}
+Number of rings                          := {{ spec.nb_rings*spec.nb_crystal_axial }}
 Number of detectors per ring             := {{ spec.nb_detectors_per_ring }}
 Inner ring diameter (cm)                 := {{ spec.inner_radius*2 / 10.0 }}
 Average depth of interaction (cm)        := 0.07
