--- a/src/python/srf/external/lmrec/templates/ringpet_config.txt.j2
+++ b/src/python/srf/external/lmrec/templates/ringpet_config.txt.j2
@@ -7,3 +7,4 @@ NumberOfBlocksPerRing: {{spec.nb_blocks_per_ring}}
 NumberOfRings: {{spec.nb_rings}}
 Grid: {{spec.block_grid}}
 BlockSize: {{spec.block_size}}
+FovRatio: {{spec.fov}}
